# SoundConverterApp

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  main.py  requirements.txt  setup.spec
.github/workflows/: release.yml  release_v2.yml
app/: application.py  converter.py  mastering.py  trimmer.py  ui_main.py  workers.py
app/resources/: __init__.py  styles.qss
app/ui/: __init__.py  convert_tab.py  mastering_tab.py  settings_tab.py  trim_tab.py
backend/: main.py  utils.py
backend/app/: __init__.py  ffmpeg_runner.py
backend/app/handler/: __init__.py  converter.py  mastering.py  trimmer.py
backend/converter/: __init__.py  ffmpeg_runner.py
examples/: basic_conversion.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: DragDropArea.jsx  ErrorModal.jsx  FileListPanel.jsx  FormatSelector.jsx  MasterControls.jsx  ModeSelector.jsx  ModifyControls.jsx  OutputFolderChooser.jsx  ProgressIndicator.jsx  ToastMessage.jsx  TrimControls.jsx  WaveformPlayer.jsx
frontend/src/context/: SettingsContext.jsx
frontend/src/hooks/: usePing.js  useSettings.js  useTauriCommand.js
frontend/src/pages/: HomePage.jsx  SettingsPage.jsx
frontend/src/utils/: audioUtils.js  i18n.js  metadataUtils.js  notifications.js  theme.js  themeColors.js  waveformCache.js
scripts/: download-binaries.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: mod.rs  python.rs
tests/: test_converter.py  test_mastering.py  test_trimmer.py
