[package]
name = "sound-converter-app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "path-all", "dialog-all", "fs-all", "shell-execute", "shell-sidecar"] }
chrono = { version = "0.4", features = ["clock"] }

[build-dependencies]
tauri-build = { version = "1", features = [] }
