[package]
name = "harmonixse"
version = "1.0.2"
edition = "2021"

[[bin]]
name = "harmonixse"
path = "src/main.rs"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
chrono = { version = "0.4", features = ["clock"] }
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2.4.1"
tauri-plugin-log = "2.7.1"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[build-dependencies]
tauri-build = { version = "2", features = [] }
